--- a/css/examples.css
+++ b/css/examples.css
@@ -48,8 +48,7 @@ abbr,acronym { border: 0;
 /* Custom CSS
  * --------------------------------------- */
 @font-face {
-	font-family: Avenir;
-	src: url(../font/Avenir.otf);
+	font-family: 'Lato', sans-serif;
 }
 body{
 	font-family: Avenir;
@@ -59,11 +58,10 @@ body{
 }
 
 @font-face {
-	font-family: Arciform;
-	src: url(../font/Arciform.otf);
+	font-family: 'Lato', sans-serif;
 }
 .header-1{
-	font-family: Arciform;
+	font-family: 'Lato', sans-serif;
 	font-size:48px;
 }
 .wrap{
@@ -582,7 +580,7 @@ ul.hr li {
 	background: #5dc4c2;
 	display: none;
 	box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
-	font-family: Arial, sans-serif;
+	font-family: 'Lato', sans-serif;
 	z-index: 9999999;
 	font-size: 14px;
 	border-radius: 15px;
@@ -592,7 +590,8 @@ ul.hr li {
 	position: absolute;
 	top: 0px;
 	right: 0px;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Lato', sans-serif;
+	
 	font-weight: bold;
 	cursor: pointer;
 	color: #5dc4c2;
